--- a/index.css
+++ b/index.css
@@ -2,7 +2,9 @@ body,
 html {
   height: 100%;
   margin: 0;
-  padding: 1em;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 @font-face {
@@ -11,16 +13,24 @@ html {
 }
 footer {
   color: gray;
-  position: absolute;
   bottom: 0;
+  flex: 0;
 }
 
 .output {
-  display: none;
+  flex: 1 1 100%;
+  margin: 10px auto;
+  overflow: auto;
+  color: gray;
   font-size: 60px;
 }
 .output .roll {
   font-family: fate;
+}
+.output .latest {
+  color: black;
+}
+.output .latest .roll {
   color: #006bba;
 }
 
@@ -31,6 +41,8 @@ button {
   appearance: none;
   border-radius: 4px;
   font-size: 20px;
+  display: inline;
+  margin: 20px auto;
 }
 
 /*# sourceMappingURL=index.css.map */
