--- a/index.scss
+++ b/index.scss
@@ -3,7 +3,9 @@ body,
 html {
   height: 100%;
   margin: 0;
-  padding: 1em;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 @font-face {
@@ -12,16 +14,26 @@ html {
 }
 footer {
   color: gray;
-  position: absolute;
   bottom: 0;
+  flex: 0;
 }
 
 .output {
-  display: none;
+  flex: 1 1 100%;
+  margin: 10px auto;
+  overflow: auto;
   .roll {
     font-family: fate;
-    color: $fate_blue;
   }
+
+  color: gray;
+  .latest {
+    color: black;
+    .roll {
+      color: $fate_blue;
+    }
+  }
+
   font-size: 60px;
 }
 
@@ -32,4 +44,6 @@ button {
   appearance: none;
   border-radius: 4px;
   font-size: 20px;
+  display: inline;
+  margin: 20px auto;
 }
